# or-panic

./: .lefthook.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: option.rs  result.rs
src/: lib.rs
